name:                koine
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Nikita Karetnikov
maintainer:          nikita@karetnikov.org
copyright:           2016 Nikita Karetnikov
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Text.Koine.Types
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , containers
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
